--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <style>
       .thisclass {
-        background-color: #EE;
+        background-color: black;
       }
     </style>
     <p class="thisclass">
