--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
   </head>
   <body>
     <style>
-      .thisclass {
-        background-color: black;
-      }
+      
     </style>
-    <p class="thisclass">
-      frdhsaiogn
-    </p>
+    <video width="320" height="320 controls> 
+      <source src="videoplayback.mp4" type="video/mp4">
+    </video>
   </body>
 </html>
